Integrated Groq AI service with Spring AI