@@ -1,12 +1,11 @@
-package com.sachin.config;
+package com.sachin.config;  // Keep this location
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
-
-import java.util.List;
+import java.util.Arrays;
 
 @Configuration
 public class CorsConfig {
@@ -14,21 +13,42 @@ public class CorsConfig {
     @Bean
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
-
+        
+        // Allow credentials (cookies, authorization headers)
         config.setAllowCredentials(true);
-
-        config.setAllowedOrigins(List.of(
-                "https://ai-ui-app-chi.vercel.app"
+        
+        // Allow specific origins
+        config.setAllowedOrigins(Arrays.asList(
+            "https://ai-ui-app-chi.vercel.app",
+            "https://*.vercel.app",  // All Vercel subdomains
+            "http://localhost:3000"   // Local development
         ));
-
-        config.setAllowedHeaders(List.of("*"));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-
-        UrlBasedCorsConfigurationSource source =
-                new UrlBasedCorsConfigurationSource();
-
+        
+        // Allow specific headers
+        config.setAllowedHeaders(Arrays.asList(
+            "Authorization",
+            "Content-Type",
+            "Accept",
+            "X-Requested-With"
+        ));
+        
+        // Allow specific methods
+        config.setAllowedMethods(Arrays.asList(
+            "GET", "POST", "PUT", "DELETE", "OPTIONS"
+        ));
+        
+        // Expose headers to frontend (if needed)
+        config.setExposedHeaders(Arrays.asList(
+            "Authorization"
+        ));
+        
+        // Cache preflight requests for 1 hour
+        config.setMaxAge(3600L);
+        
+        // Register configuration
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
-
+        
         return new CorsFilter(source);
     }
 }
